Commit new changes

--- a/style.css
+++ b/style.css
@@ -13,28 +13,111 @@ body {
 
 nav {
     font-family: 'U buntu', sans-serif;
+    
+
 }
 
-nav ul{
+nav ul {
     display: flex;
-    align-items: center ;
+    align-items: center;
     list-style-type: none;
     height: 65px;
     background-color: black;
     color: white;
 }
-nav ul li{
+
+nav ul li {
     padding: 0 12px;
 }
 
-.brand img{
+.brand img {
     width: 44px;
     padding: 0 8px;
 }
 
-.brand{
+.brand {
     display: flex;
     align-items: center;
     font-weight: bolder;
     font-size: 2rem;
+}
+
+.container {
+    min-height: 80vh;
+    background-color: black;
+    color: white;
+    font-family: 'Varela Round', sans-serif;
+    display: flex;
+    margin: 23px auto;
+    width: 70%;
+    border-radius: 12px;
+    padding: 34px;
+    background-image: url('bg.jpg');
+}
+
+.songItemContainer{
+    margin-top: 74px;
+}
+
+.songItem{
+    height: 50px;
+    display: flex;
+    background-color: white;
+    color: black;
+    margin: 12px 0;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 23px;
+}
+
+.songItem img{
+    width: 43px;
+    margin: 0 23px;
+    border-radius: 34px;
+}
+
+.timeStamp{
+    margin: 0 23px;
+}
+
+.timeStamp i{
+    cursor: pointer;
+}
+
+
+.bottom {
+    position: sticky;
+    height: 100px;
+    background-color: black;
+    color: white;
+    bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#myProgressBar {
+    width : 190vh;
+    text-align: center;
+    cursor: pointer;
+}
+
+.icons{
+    margin-top:9px;
+}
+.icons i{
+    cursor: pointer;
+}
+
+.songInfo{
+    position:absolute;
+    left: 6.5vw;
+    font-family: 'Varela Round', sans-serif;
+
+}
+.songInfo img{ 
+    opacity: 0;
+    transition: opacity 1s ease-in;
 }
